playground/ingress/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: ingress
spec:
  gateways:
    - istio-gateway
  hosts:
    - "grafana.dev.lake.mosaicsquare.link"
  http:
    - name: "grafana-route"
      route:
      - destination:
          host: prometheus-grafana.monitoring.svc.cluster.local
          port:
            number: 80
