playground/ingress/product-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtual-service
  namespace: default
spec:
  # 아래처럼 다른 namespace 의 gateway를 설정가능
  gateways:
    - ingress/istio-gateway
  hosts:
    - "product.dev.partner.gomicorp.click"
  http:
    - name: "product-route"
      route:
      - destination:
          host: productpage.default.svc.cluster.local
          port:
            number: 9080
